dark mode fix

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,19 +1,33 @@
 @import "tailwindcss";
 
+/* Changed Defaults to Dark Mode */
+
 :root {
-	--background: #ffffff;
-	--foreground: #171717;
+	--background: #0a0a0a;
+	--foreground: #ededed;
 }
 
 html {
 	scroll-behavior: smooth !important;
 }
 
+/* Added Marquee */
+
 @theme inline {
 	--color-background: var(--background);
 	--color-foreground: var(--foreground);
 	--font-sans: var(--font-geist-sans);
 	--font-mono: var(--font-geist-mono);
+	--animate-marquee: marquee 40s linear infinite;
+
+	@keyframes marquee {
+		from {
+			transform: translateX(0);
+		}
+		to {
+			transform: translateX(calc(-1 * var(--marquee-width)));
+		}
+	}
 }
 
 @media (prefers-color-scheme: dark) {
@@ -32,19 +46,11 @@ body {
 /* Custom */
 
 .bg-mask {
-	-webkit-mask-image: linear-gradient(to bottom, black 0%, black 60%, transparent 100%);
+	-webkit-mask-image: linear-gradient(
+		to bottom,
+		black 0%,
+		black 60%,
+		transparent 100%
+	);
 	mask-image: linear-gradient(to bottom, black 0%, black 60%, transparent 100%);
-}
-
-@theme {
-	--animate-marquee: marquee 40s linear infinite;
-
-	@keyframes marquee {
-		from {
-			transform: translateX(0);
-		}
-		to {
-			transform: translateX(calc(-1 * var(--marquee-width)));
-		}
-	}
 }
